--- a/css/style.css
+++ b/css/style.css
@@ -301,20 +301,22 @@ filter: blur(4px);
 }
 
 .container-row>div {
-    padding: 20px 0;
+    padding: 20px;
     font-size: 30px;
     height: 500px;
     margin-top: 10px;
     margin-left: 10px;
     border-radius: 1rem;
-    box-shadow: 1px 1px 1px rgb(0, 0, 0, 0.4);
+    -webkit-box-shadow: 10px 10px 20px 0px rgba(204,204,204,1);
+    -moz-box-shadow: 10px 10px 20px 0px rgba(204,204,204,1);
+    box-shadow: 10px 10px 20px 0px rgba(204,204,204,1);
 }
 
 .hospital>div{
 	background-color: rgb(150,240,228);
 }
 .donor>div{
-	background-color: rgb(241,190,190);
+	background-color: rgb(255,215,215);
 }
 .organization>div{
 	background-color: rgb(243,239,201);
@@ -391,6 +393,7 @@ filter: blur(4px);
 	margin-top: 70px;
 	font-weight: bold;
 }
+
 .filter {
 	margin-top: -100px;
 	font-size: 20px;
@@ -473,6 +476,35 @@ input[type=submit]{
 	width: 300px;
 	height: 100px;
 }
+.donor_calander{
+	font-size: 20px;
+	text-align: center;
+	margin-top: 60px;
+	margin-left: 160px;
+	font-weight: bold;
+}
+.donor_time{
+	float: right;
+	font-size: 20px;
+	margin-top: -67px;
+	margin-right: 260px;
+	font-weight: bold;
+}
+.donor_time input.input-field{
+	width: 48%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	-moz-box-shadow: 1px 1px 4px #EBEBEB;
+	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
 /*donor*/
 
 
@@ -513,4 +545,227 @@ input[type=submit]{
     height: 15px;
     flex: 1;
     text-align: center;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Table ]*/
+
+.limiter {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container-table100 {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 33px 30px;
+}
+
+.wrap-table100 {
+  width: 900px;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Table ]*/
+.table100 {
+  background-color: #fff;
+}
+
+table {
+  width: 100%;
+}
+
+th, td {
+  font-weight: unset;
+  padding-right: 10px;
+  text-align: center;
+}
+
+.column1 {
+  width: 33%;
+  padding-left: 40px;
+}
+
+.column2 {
+  width: 50%;
+}
+
+.column3 {
+  width: 27%;
+}
+
+.table100-head th {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.table100-body td {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+/*==================================================================
+[ Fix header ]*/
+.table100 {
+  position: relative;
+  padding-top: 60px;
+}
+
+.table100-head {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.table100-body {
+  max-height: 585px;
+  overflow: auto;
+}
+
+.table100.ver2 .table100-head {
+  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.table100.ver2 th {
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  color: #fa4251;
+  line-height: 1.4;
+
+  background-color: transparent;
+}
+
+.table100.ver2 td {
+  font-family: Roboto, sans-serif;
+  font-size: 15px;
+  color: #808080;
+  line-height: 1.4;
+}
+
+.table100.ver2 .table100-body tr {
+  border-bottom: 1px solid #f2f2f2;
+}
+
+/*---------------------------------------------*/
+
+.table100.ver2 {
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+  -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+  -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.table100.ver2 .ps__rail-y {
+  right: 5px;
+}
+
+.table100.ver2 .ps__rail-y::before {
+  background-color: #ebebeb;
+}
+
+.table100.ver2 .ps__rail-y .ps__thumb-y::before {
+  background-color: #cccccc;
+}
+
+/* Buttons */
+
+.tile{
+    width: 45%;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.75);
+    padding-top: 10px;
+    font-size: 16px;
+    border-color: #000;
+    border-radius: 5px;
+    text-align: center;
+    display: inline-grid;
+    margin: 22px;
+    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.tile:hover{
+    background-color: rgba(255, 255, 255, 1);
+    transition-delay: 1s;
+}
+
+.tile-container{
+    margin: auto;
+    margin-top: 40px;
+}
+
+.greeting{
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+
+/*Clock css updated at 12.06 PM*/
+.datetime{
+  color: #fff;
+  background: #10101E;
+  font-family: "Segoe UI", sans-serif;
+  width: 340px;
+  padding: 15px 10px;
+  border: 3px solid #2E94E3;
+  border-radius: 5px;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.1));
+  transition: 0.5s;
+  transition-property: background, box-shadow;
+  float: right;
+}
+
+.datetime:hover{
+  background: #2E94E3;
+  box-shadow: 0 0 30px #2E94E3;
+}
+
+.date{
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time{
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.time span:not(:last-child){
+  position: relative;
+  margin: 0 6px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time span:last-child{
+  background: #2E94E3;
+  font-size: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 10px;
+  padding: 0 5px;
+  border-radius: 3px;
 }
